# VisualCoT-NLE

./: .gitignore  .gitmodules  README.md  environment.yml  evaluate.py  pyproject.toml  requirements.txt  setup.cfg
.specify/refactorcode/: constitution.md  plan.md  specs.md  tasks.md
configs/datasets/: aokvqa.yaml  vivqax.yaml
configs/datasets/vivqax/: vivqax_test.yaml  vivqax_train.yaml
configs/experiments/: aokvqa_baseline.yaml  vivqax_baseline.yaml
configs/pipelines/: vctp_default.yaml
data/raw/aokvqa_annotations/: aokvqa_v1p0_train_from_hf.json
data/raw/coco_annotations/: captions_train2014.json
notebooks/: CLIP Features.ipynb  extract_obj.ipynb  read_coco.ipynb  read_object_similarity.ipynb  see.ipynb
notebooks/test_output/: test_similarity.pkl
results/: evaluate_visual_cot_results_20251123_232146.csv  evaluate_visual_cot_results_20251123_233112.csv  evaluate_visual_cot_results_20251124_002232.csv  evaluate_visual_cot_results_20251124_004814.csv  evaluate_visual_cot_results_20251124_160404.csv  visual_cot_results.json  vivqax_test_results.json
scripts/: download_data.sh  download_vivqax.py  prepare_scenegraph2014.py  preprocess_aokvqa_data.py
src/: pipeline.py
src/cli/: evaluate.py  inference.py  preprocess.py  run_aokvqa_pipeline.py  run_vivqax_pipeline.py
src/core/confirm/: confirmation.py
src/core/see/: perception.py
src/core/think/: attention_obj.py  caption_obj.py  (+1 more)
src/data/: loader.py
src/evaluation/: evaluator.py  metrics.py
src/utils/: preprocessing_text.py
tests/: test_dataset_smoke.py  test_single_aokvqa_sample.py
(+124 files in other folders)
