[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets==4.2.0",
    "einops==0.8.0",
    "ftfy==6.3.1",
    "groq==0.33.0",
    "keybert==0.9.0",
    "langchain==1.0.8",
    "langchain-openai==1.0.3",
    "matplotlib==3.10.7",
    "numpy==1.26.4",
    "omegaconf==2.2.3",
    "pillow==11.0.0",
    "pydantic==2.12.2",
    "python-dotenv==1.2.1",
    "pyyaml==6.0.3",
    "regex==2025.9.18",
    "safetensors==0.6.2",
    "torch==2.5.0",
    "torchaudio==2.5.0",
    "torchmetrics==1.8.2",
    "torchvision==0.20.0",
    "tqdm==4.67.1",
    "transformers==4.57.1",
    "underthesea==8.3.0",
]
